<resources>
    <string name="app_name">Doktor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Медикоменты</string>
    <string name="menu_gallery">Фото</string>
    <string name="menu_slideshow">Сообщения</string>
    <string name="menu_tools">Мое состояние</string>
    <string name="menu_set">Настройки</string>
    <string name="menu_send">Статистка</string>
    <string name="menu_stat">Настройки</string>
    <string name="item_graph_title">гобэдия</string>
</resources>
