<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.kamaz.itis.doktor.ui.Tablet.TabletFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_tablet" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.kamaz.itis.doktor.ui.camera.CameraFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.kamaz.itis.doktor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ru.kamaz.itis.doktor.ui.state.HealthStatusFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_health_stsus" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ru.kamaz.itis.doktor.ui.share.ShareFragment"
        android:label="@string/menu_stat"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_set"
        android:name="ru.kamaz.itis.doktor.ui.settings.SettingsFragment"
        android:label="@string/menu_set"
        tools:layout="@layout/fragment_share"
        />

    <fragment
        android:id="@+id/nav_send"
        android:name="ru.kamaz.itis.doktor.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>