<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_launcher_pay"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_launcher_camera"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_launcher_mess"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_launcher_heart"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_set"
                android:icon="@drawable/ic_launcher_set"
                android:title="@string/menu_stat" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_launcher_stat"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="Поделиться" />
        </menu>
    </item>

</menu>
